# sfzen

./: README.md  __init__.py  drumkits.py  list_opcodes.py  opcodes.py  pyproject.toml  pytest.ini  resampler.py  sfz_elems.py  sort.py  syntax.py
scripts/: sfz_copy.py  sfz_encoding_check.py  sfz_opcode_usage.py  sfz_resample.py  sfzcopy.py
sfzen/: __init__.py  __main__.py  drumkits.py  opcodes.py  parser.py  resampler.py  sfz_elems.py
sfzen/cleaners/: __init__.py  liquidsfz.py
sfzen/scripts/: __init__.py  sfz_copy.py  sfz_liquid_safe.py  sfz_opcode_info.py  sfz_opcode_usage.py  sfz_samples.py  sfz_validate.py
tests/: __init__.py  create-sample-content.sh  test_10_parser.py  test_20_element_basics.py  test_30_sfz_basics.py  test_40_external_files.py  test_40_samples.py  test_50_validation.py  test_60_simplifying.py  test_70_save_as.py  test_80_cleaners.py  test_90_drumkits.py
tests/sfzs/bad/01_bad_values/: root.sfz
tests/sfzs/bad/02_bad_headers/: root.sfz
tests/sfzs/bad/03_missing_samples/: root.sfz
tests/sfzs/bad/04_missing_include/sfz/: root.sfz
tests/sfzs/drumkits/ms-standard/: Drm-Standard.sfz
tests/sfzs/good/01_simple/: root.sfz
tests/sfzs/good/02_backslashes/: root.sfz
tests/sfzs/good/02_spaces/: root.sfz
tests/sfzs/good/03_defines/: root.sfz
tests/sfzs/good/04_local_defines/: defines.sfz  root.sfz
tests/sfzs/good/05_samples_astride/sfz/: root.sfz
tests/sfzs/good/06_include_beneath/: root.sfz
tests/sfzs/good/06_include_beneath/includes/: include.sfz
tests/sfzs/good/07_include_astride/sfz/: root.sfz
tests/sfzs/good/08_include_samples_astride/includes/: include.sfz
tests/sfzs/good/08_include_samples_astride/sfz/: root.sfz
tests/sfzs/good/09_inherited_opcodes/: root.sfz
tests/sfzs/good/10_default_path/: root.sfz
tests/sfzs/good/11_liquid_unsupported/: root.sfz
tests/sfzs/good/12_reductions/: root.sfz
utils/: compile_key_type_opcodes.py  compile_syntax.py  sample_unit_opcodes.py  sfzen_opcodes.py
utils/res/: syntax.py
