[project]
name = "sfzen"
authors = [{name = "Leon Dionne", email = "ldionne@dridesign.sh.cn"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.10",
	"Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
	"Topic :: Multimedia :: Sound/Audio :: MIDI"
]
dynamic = ["version", "description"]
dependencies = ["progress", "midi_notes >= 1.3.0"]

[project.optional-dependencies]
devel = ["yaml", "repr_soso"]

[project.urls]
Home = "https://github.com/Zen-Master-SoSo/sfzen"

[project.scripts]
sfz-copy = "sfzen.scripts.sfz_copy:main"
sfz-liquid-safe = "sfzen.scripts.sfz_liquid_safe:main"
sfz-opcode-info = "sfzen.scripts.sfz_opcode_info:main"
sfz-opcode-usage = "sfzen.scripts.sfz_opcode_usage:main"
sfz-samples = "sfzen.scripts.sfz_samples:main"
sfz-validate = "sfzen.scripts.sfz_validate:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[bumpver]
current_version = "2.1.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[bumpver.file_patterns]
"sfzen/__init__.py" = [
    '^__version__ = "{version}"$',
]
